Trying to fix Wonky Sqaush of Images on Mobile Edge

--- a/sample_react_apps/mortal_kombat_x_syn_tours_app/src/components/PlayerComponent/PlayerComponent.css
+++ b/sample_react_apps/mortal_kombat_x_syn_tours_app/src/components/PlayerComponent/PlayerComponent.css
@@ -14,6 +14,7 @@
 img {
   border-top-left-radius: 1rem;
   border-top-right-radius: 1rem;
+  background-size: cover;
 }
 
 h1 {
